# ai-agent

./: README.md  pyproject.toml  requirements.txt
output/: post.txt
src/ai_project/: crew.py  main.py  mainapp.py
src/ai_project/config/: agents.yaml  tasks.yaml
src/backend/: main.py
